--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,10 @@ jobs:
         with:
           command: buildozer android debug
           buildozer_version: stable
-
+      
+      - name: coiso
+        run: adb logcat -s python
+      
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
